@@ -189,7 +189,7 @@
 
             <listitem>
               <para>Download the Visual Basic 6.0 runtime distribution from
-              Microsoft: <ulink
+              <trademark class="registered">Microsoft</trademark>:<ulink
               url="http://support.microsoft.com/kb/290887">http://support.microsoft.com/kb/290887</ulink>
               and install it. Or download just the one needed file from:
               <ulink
